--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,21 +13,21 @@
     <uses-sdk android:minSdkVersion="15"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:hardwareAccelerated="true">
-        <!--<activity android:name="MyActivity"-->
-                  <!--android:label="@string/app_name">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
-
-        <activity android:name=".CameraActivity"
+        <activity android:name=".HelloWorldActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <!--<activity android:name=".CameraActivity"-->
+                  <!--android:label="@string/app_name">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
 
         <!--<activity android:name="ProceessingActivity"-->
                   <!--android:label="@string/app_name"-->
