--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,15 @@
     <uses-sdk android:minSdkVersion="15"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:hardwareAccelerated="true">
-        <activity android:name=".HelloWorldActivity"
+        <!--<activity android:name=".HelloWorldActivity"-->
+                  <!--android:label="@string/app_name">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <activity android:name=".SyncWebviewActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
